starting second section

--- a/index.html
+++ b/index.html
@@ -34,24 +34,45 @@
     </header>
 
     <main>
-        <div class="section bg-jumbo d-flex"> 
+
+        <div class="section bg-jumbo"> 
             <div class="container-big"> 
+
+                <div class="jumbo">
+                    <div class="row">
+                        <div class="col text-spacing">
+                            <h1>Tutto ciò che serve per il lavoro, in un unico posto</h1>
+                        </div>
+                    </div>
+                    <div class="row d-flex">
+                        <div class="col col-small">
+                            <p class="text-spacing">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox è uno spazio di archiviazione sicuro: è un modo intelligiente e integrato per ottimizzare il flusso di lavoro sistente.</p>
+                            <div class="btn text-spacing">Inizia la tua prova gratuita</div>
+                            <p class="text-spacing">Annulla in qualsiasi momento</p>
+                            <div class="arrow"><i class="fa-solid fa-arrow-down"></i></div>
+                        </div>
+                        <div class="col col-wide">
+                        <img src="img/jumbo.png" alt="Immagine Jumbo Dropbox"> 
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="section">
+            <div class="container-small">
+
                 <div class="row">
-                    <div class="col d-flex text-spacing">
-                        <h1>Tutto ciò che serve per il lavoro, in un unico posto</h1>
+                    <h2>Trova il piano business che fa per te</h2>
+                    <div class="radio">
+                        <input type="radio" name="fatturazione" id="Fatturazione mensile">
+                        <label for="Fatturazione mensile">Fatturazione Mensile</label>
+
+                        <input type="radio" name="fatturazione" id="Fatturazione annuale">
+                        <label for="Fatturazione annuale">Fatturazione Annuale</label>
                     </div>
                 </div>
-                <div class="row d-flex">
-                    <div class="col d-flex column">
-                        <p class="text-spacing">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox è uno spazio di archiviazione sicuro: è un modo intelligiente e integrato per ottimizzare il flusso di lavoro sistente.</p>
-                        <div class="btn d-flex text-spacing">Inizia la tua prova gratuita</div>
-                        <p class="text-spacing">Annulla in qualsiasi momento</p>
-                        <div class="arrow"><i class="fa-solid fa-arrow-down"></i></div>
-                    </div>
-                    <div class="col d-flex">
-                    <img src="img/jumbo.png" alt="Immagine Jumbo Dropbox"> 
-                    </div>
-                </div>
+
             </div>
         </div>
         
