second section proggress

--- a/index.html
+++ b/index.html
@@ -63,14 +63,24 @@
             <div class="container-small">
 
                 <div class="row">
-                    <h2>Trova il piano business che fa per te</h2>
+                    <h2 class="text-spacing">Trova il piano business che fa per te</h2>
                     <div class="radio">
-                        <input type="radio" name="fatturazione" id="Fatturazione mensile">
-                        <label for="Fatturazione mensile">Fatturazione Mensile</label>
+                        <input type="radio" name="fatturazione" id="Fatturazione mensile" >
+                        <label for="Fatturazione mensile" class="radio">Fatturazione Mensile</label>
 
                         <input type="radio" name="fatturazione" id="Fatturazione annuale">
-                        <label for="Fatturazione annuale">Fatturazione Annuale</label>
+                        <label for="Fatturazione annuale" class="radio">Fatturazione Annuale</label>
                     </div>
+                </div>
+
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col"></div>
                 </div>
 
             </div>
