--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
     <main>
 
-        <div class="section bg-jumbo"> 
-            <div class="container-big"> 
+        <div class="section bg-jumbo">
 
+            <div class="container-big"> 
                 <div class="jumbo">
                     <div class="row">
                         <div class="col text-spacing">
@@ -56,10 +56,11 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+
         </div>
         <div class="section">
+
             <div class="container-small">
 
                 <div class="row text-spacing">
@@ -83,7 +84,7 @@
                                     </div>
                                 </div>
 
-                                <div class="card-bottom">
+                                <div class="internal-spacing">
                                         <h3 class="text-spacing">Professional</h3>
                                         <div class="text-spacing">€ 12.00</div>
                                         <div class="text-spacing">/mese</div>
@@ -117,7 +118,7 @@
                                         <div><i class="fa-solid fa-user"></i> Singolo</div>
                                     </div>
                                 </div>
-                                <div class="card-bottom">
+                                <div class="internal-spacing">
                                         <h3 class="text-spacing">Professional</h3>
                                         <div class="text-spacing">€ 12.00</div>
                                         <div class="text-spacing">/mese</div>
@@ -186,7 +187,7 @@
                                         <div><i class="fa-solid fa-user"></i> Singolo</div>
                                     </div>
                                 </div>
-                                <div class="card-bottom d-flex">
+                                <div class="internal-spacing d-flex">
                                     <div class="col">
                                         <h3 class="text-spacing">Enterprise</h3>
                                         <h5 class="text-spacing">Contatta l'ufficio vendite per i prezzi</h5>
@@ -202,17 +203,93 @@
 
                 </div>
             </div>
+
         </div>
+
+        <div class="section">
+
+            <div class="container-small">
+                <div class="row d-flex">
+                    <div class="col col-wide">
+                        <img src="img/partner.png" alt="Partner">
+
+                    </div>
+                    <div class="col internal-spacing col-small">
+                        <h4 class="text-spacing">Entra in contatto con un partner Dropbox</h4>
+                        <p class="text-spacing">Trova il partner Dropbox e HelloSign di fiducia. Ottieni la soluzione e i servizi necessari per raggiungere i tuoi obbiettivi aiendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                        <div class="btn white text-spacing">Trova un partner</div>
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="section">
+
+            <div class="container-small">
+                <div class="row">
+                    <h2>Esegui più operazioni con Dropbox Business</h2>
+                </div>
+                <div class="row d-flex gap-2">
+                    <div class="col d-flex column">
+                        <div class="text-spacing"><img src="img/business-feature-switching-tools.png" alt="Immagine Dropbox Switching Tools"></div>
+                        <h4 class="text-spacing">Passa di meno da uno strumento all'altro</h4>
+                        <p class="text-spacing">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col d-flex column">
+                        <div class="text-spacing"><img src="img/business-feature-switching-tools.png" alt="Immagine Dropbox Switching Tools"></div>
+                        <h4 class="text-spacing">Passa di meno da uno strumento all'altro</h4>
+                        <p class="text-spacing">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col d-flex column">
+                        <div class="text-spacing"><img src="img/business-feature-switching-tools.png" alt="Immagine Dropbox Switching Tools"></div>
+                        <h4 class="text-spacing">Passa di meno da uno strumento all'altro</h4>
+                        <p class="text-spacing">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                </div>
+                <div class="row d-flex gap-2">
+                    <div class="col d-flex column">
+                        <div class="text-spacing"><img src="img/business-feature-switching-tools.png" alt="Immagine Dropbox Switching Tools"></div>
+                        <h4 class="text-spacing">Passa di meno da uno strumento all'altro</h4>
+                        <p class="text-spacing">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col d-flex column">
+                        <div class="text-spacing"><img src="img/business-feature-switching-tools.png" alt="Immagine Dropbox Switching Tools"></div>
+                        <h4 class="text-spacing">Passa di meno da uno strumento all'altro</h4>
+                        <p class="text-spacing">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col d-flex column">
+                        <div class="text-spacing"><img src="img/business-feature-switching-tools.png" alt="Immagine Dropbox Switching Tools"></div>
+                        <h4 class="text-spacing">Passa di meno da uno strumento all'altro</h4>
+                        <p class="text-spacing">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="section">
+            <div class="container-small">
+                <div class="row">
+                    <div class="col col-wide">
+                        <h2 class="text-spacing">Più di 500.000 Teams usano Dropbox Business</h2>
+                        <div class="text-spacing"><a href="#">Scopri di più sui nostri clienti</a></div>
+                    </div>
+                    <div class="col col-small"></div>
+                </div>
+            </div>
+        </div>
+
         <div class="section">
             <div class="row">
-                <div class="col">
-                    <img src="img/partner.png" alt="Partner">
-
-                </div>
+                <div class="col"></div>
+                <div class="col"></div>
                 <div class="col"></div>
             </div>
-            
         </div>
+
     </main>
     
     <footer></footer>
