--- a/index.html
+++ b/index.html
@@ -283,16 +283,98 @@
         </div>
 
         <div class="section">
-            <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+            <div class="row d-flex">
+                <div class="col">
+                    <div class="brand-square-container">
+                        <div class="designit brand-square"><img src="img/designit.svg" alt="Designit Logo"></div>
+                        <div class="arizona brand-square"><img src="img/arizona_state_university.svg" alt="Arizona State University Logo"></div>
+                        <div class="florida brand-square"><img src="img/university_of_florida.svg" alt="University Of Forida Logo"></div>
+                        <div class="topps brand-square"><img src="img/topps.svg" alt="Topps Logo"></div>                         
+                    </div>
+                </div>
+                <div class="col internal-spacing">
+                    <div class="brand-square-container column">
+                        <div class="text-spacing small-w"><img src="img/designit.svg" alt="Disignit Logo"></div>
+                        <div class="small-line text-spacing"></div>
+                        <p class="text-spacing">"I membri del nostro team lavorano costantemente, in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con le nostre esigenze, ma nessuna è facile come Dopbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigienze, ma nessuna è facile come Dropbox Paper". </p>
+                        <p class="text-spacing">Morten Thomsen, Global IT Lead</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="brand-square-container">
+                        <div class="bicycle brand-square"><img src="img/world_bicycle_relief.svg" alt="World Bicycle Relif Logo"></div>
+                        <div class="hearts brand-square"><img src="img/hearst_corp.svg" alt="Hearst Corporation Logo"></div>
+                        <div class="lonely brand-square"><img src="img/lonely_planet.svg" alt="Lonely Planet Logo"></div>
+                        <div class="clear brand-square"><img src="img/clear_channel.svg" alt="Clear Channel Logo"></div> 
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section bg-jumbo">
+            <div class="container-small">
+                <div class="row d-flex internal-spacing">
+                    <div class="col col-wide">
+                        <h2 class="pourple">Porta Dropbox Business nella tua azienda.</h2>
+                    </div>
+                    <div class="col col-small">
+                        <div class="btn white">Inizia la tua prova gratuita</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section">
+            <div class="container-small">
+                <div class="row bottom-line">
+                    <h2>Domande frequenti</h2>
+                </div>
+                <div class="row bottom-line d-flex space-b">
+                    <p>Qual'è la differenza tra Dropbox Business e Dropbox Advanced</p>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="row bottom-line d-flex space-b">
+                    <p>Qual'è la differenza tra Dropbox Business e Dropbox Advanced</p>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="row bottom-line d-flex space-b">
+                    <p>Qual'è la differenza tra Dropbox Business e Dropbox Advanced</p>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
             </div>
         </div>
 
     </main>
     
-    <footer></footer>
+    <footer>
+        <div class="section">
+            <div class="row">
+                <div class="col">
+                    <h4>Dropbox</h4>
+                    <ul>
+                        <li>Applicazioni Destop</li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Prodotti</h4>
+                </div>
+                <div class="col">
+                    <h4>Azienda</h4>
+                </div>
+                <div class="col">
+                    <h4>Supporto</h4>
+                </div>
+                <div class="col">
+                    <h4>Comunity</h4>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 
 </body>
 </html>
