--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                                         <div class="text-spacing">oppure <a href="#">acquista ora</a></div>
                                         <div class="small-line text-spacing"></div>
                                         <h5 class="text-spacing">Punti sallienti del piano</h5>
-                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i></div><div> Nessun limite di spazio per file</div>
-                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i></div><div> Cartelle offline su dispositivi mobili</div>
-                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i></div><div> Risparmio del 50% rispetto alle iscizioni singole</div>
-                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i></div><div> Possibilità di inserire nuovi membri del team</div>
-                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i></div><div> Gestione dei permessi in base ai ruoli</div>
+                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i> Nessun limite di spazio per file</div>
+                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</div>
+                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i> Risparmio del 50% rispetto alle iscizioni singole</div>
+                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i> Possibilità di inserire nuovi membri del team</div>
+                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i> Gestione dei permessi in base ai ruoli</div>
                                 </div>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
                                         <div><i class="fa-solid fa-user"></i> Azienda</div>
                                     </div>
                                 </div>
-                                <div class="card-bottom">
+                                <div class="card-bottom internal-spacing">
                                         <h3 class="text-spacing">Enterprise</h3>
                                         <div class="text-spacing">Contattaci</div>
                                         <div class="text-spacing">-</div>
@@ -175,9 +175,9 @@
                                         <div class="text-spacing">oppure <a href="#">acquista ora</a></div>
                                         <div class="small-line text-spacing"></div>
                                         <h5 class="text-spacing">Punti sallienti del piano</h5>
-                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i></div><div> Cartelle offline su dispositivi mobili</div>
-                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i></div><div> Servizio assistenza 24h</div>
-                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i></div><div> Possibilità di personalizzazione totale</div>
+                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</div>
+                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i> Servizio assistenza 24h</div>
+                                        <div class="punti-salienti text-spacing"><i class="fa-solid fa-check"></i> Possibilità di personalizzazione totale</div>
                                 </div>
                             </div>
                         </div>
@@ -286,7 +286,7 @@
             </div>
         </div>
 
-        <div class="section">
+        <div class="section clear-padding-b">
             <div class="row d-flex">
                 <div class="col">
                     <div class="brand-square-container">
